# clone-factory

./: Cargo.toml  README.md  TODO.txt  Trunk.toml  index.html
src/: action.rs  actor.rs  app.rs  data.rs  data.toml  datatypes.rs  db.rs  devtools.rs  direction.rs  error.rs  eventloop.rs  eventqueue.rs  game.rs  input.rs  inventory.rs  main.rs  paradox.rs  render.rs  score.rs  world.rs
src/buildings/: mod.rs
src/engine/: mod.rs  tracking_worldlayer.rs  update.rs  worldlayer.rs
src/game_state/: db.rs  game.rs  mod.rs  world.rs
src/interface/: input.rs  mod.rs  render.rs  widgets.rs
src/interface/menu/: craftingmenu.rs  gamemenu.rs  lookmenu.rs  mainmenu.rs  mod.rs
src/interface_egui/: crafting.rs  error.rs  info.rs  inventory.rs  mod.rs  movement.rs  recording.rs  worldwindow.rs
src/recording/: db.rs  interface.rs  mod.rs
src/static_data/: data.toml  map.rs  mod.rs
src/worldgen/: mod.rs
