[package]
name = "clone-factory"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.30.0"
egui = "0.30.0"
egui_extras = { version = "0.30.0", features = ["all_loaders"] }
# Explicitly add png support, or it won't work on web.
image = {version = "0.25.5", features = ["png"]}
log = "0.4.25"
serde = "1.0.217"
serde_derive = "1.0.217"
toml = "0.8.19"

#[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = {version = "0.3.77", features = ["Location", "Window"]}
